Add calculator structure

--- a/index.html
+++ b/index.html
@@ -12,6 +12,33 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    
+    <main>
+        <section class="calculator" aria-label="Calculator">
+            <div class="screen" aria-label="Screen">
+
+            </div>
+
+            <div class="buttons" aria-label="Buttons">
+                <button class="clear" aria-label="Clear">AC</button>
+                <button class="delete" aria-label="Delete">⌫</button>
+                <button class="operator" aria-label="Division">/</button>
+                <button class="operator" aria-label="Multiplication">*</button>
+                <button class="digits">7</button>
+                <button class="digits">8</button>
+                <button class="digits">9</button>
+                <button class="operator" aria-label="Subtract">-</button>
+                <button class="digits">4</button>
+                <button class="digits">5</button>
+                <button class="digits">6</button>
+                <button class="operator" aria-label="Add">+</button>
+                <button class="digits">1</button>
+                <button class="digits">2</button>
+                <button class="digits">3</button>
+                <button class="equal">=</button>
+                <button id="special" class="digits">0</button>
+                <button class="digits">.</button>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
