Change the division element

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="buttons" aria-label="Buttons">
                 <button class="clear" aria-label="Clear">AC</button>
                 <button class="delete" aria-label="Delete">⌫</button>
-                <button class="operator" aria-label="Division">/</button>
+                <button class="operator" aria-label="Division">÷</button>
                 <button class="operator" aria-label="Multiplication">*</button>
                 <button class="digits">7</button>
                 <button class="digits">8</button>
