Add extra class to buttons sharing general style

--- a/index.html
+++ b/index.html
@@ -19,24 +19,24 @@
             </div>
 
             <div class="buttons" aria-label="Buttons">
-                <button class="clear" aria-label="Clear">AC</button>
-                <button class="delete" aria-label="Delete">⌫</button>
-                <button class="operator" aria-label="Division">÷</button>
-                <button class="operator" aria-label="Multiplication">*</button>
-                <button class="digits">7</button>
-                <button class="digits">8</button>
-                <button class="digits">9</button>
-                <button class="operator" aria-label="Subtract">-</button>
-                <button class="digits">4</button>
-                <button class="digits">5</button>
-                <button class="digits">6</button>
-                <button class="operator" aria-label="Add">+</button>
-                <button class="digits">1</button>
-                <button class="digits">2</button>
-                <button class="digits">3</button>
+                <button class="general clear" aria-label="Clear">AC</button>
+                <button class="general delete" aria-label="Delete">⌫</button>
+                <button class="general operator" aria-label="Division">÷</button>
+                <button class="general operator" aria-label="Multiplication">*</button>
+                <button class="general digits">7</button>
+                <button class="general digits">8</button>
+                <button class="general digits">9</button>
+                <button class="general operator" aria-label="Subtract">-</button>
+                <button class="general digits">4</button>
+                <button class="genaral digits">5</button>
+                <button class="general digits">6</button>
+                <button class="general operator" aria-label="Add">+</button>
+                <button class="general digits">1</button>
+                <button class="general digits">2</button>
+                <button class="general digits">3</button>
                 <button class="equal">=</button>
                 <button id="special" class="digits">0</button>
-                <button class="digits">.</button>
+                <button class="general digits">.</button>
             </div>
         </section>
     </main>
