--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <button class="general digits">9</button>
                 <button class="general operator" aria-label="Subtract">-</button>
                 <button class="general digits">4</button>
-                <button class="genaral digits">5</button>
+                <button class="general digits">5</button>
                 <button class="general digits">6</button>
                 <button class="general operator" aria-label="Add">+</button>
                 <button class="general digits">1</button>
