Add numbers display in calculator screen

--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
     <main>
         <section class="calculator" aria-label="Calculator">
             <div class="screen" aria-label="Screen">
-
+                <span class="sub-display"></span>
+                <span class="main-display"></span>
             </div>
 
             <div class="buttons" aria-label="Buttons">
                 <button class="general clear" aria-label="Clear">AC</button>
-                <button class="general delete" aria-label="Delete">⌫</button>
+                <button class="general digits" aria-label="Delete">⌫</button>
                 <button class="general operator" aria-label="Division">÷</button>
                 <button class="general operator" aria-label="Multiplication">*</button>
                 <button class="general digits">7</button>
@@ -34,8 +35,8 @@
                 <button class="general digits">1</button>
                 <button class="general digits">2</button>
                 <button class="general digits">3</button>
-                <button class="equal">=</button>
-                <button id="special" class="digits">0</button>
+                <button class="general equal">=</button>
+                <button class="special digits">0</button>
                 <button class="general digits">.</button>
             </div>
         </section>
