Add accesability in screen calculator

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <main>
         <section class="calculator" aria-label="Calculator">
             <div class="screen" aria-label="Screen">
-                <span class="sub-display"></span>
-                <span class="main-display"></span>
+                <span class="sub-display" aria-label="Current operation"></span>
+                <span class="main-display" aria-label="Current value"></span>
             </div>
 
             <div class="buttons" aria-label="Buttons">
