--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
             <div class="buttons" aria-label="Buttons">
                 <button class="general clear" aria-label="Clear">AC</button>
-                <button class="general digits" aria-label="Delete">⌫</button>
+                <button class="general delete" aria-label="Delete">⌫</button>
                 <button class="general operator" aria-label="Division">÷</button>
                 <button class="general operator" aria-label="Multiplication">*</button>
                 <button class="general digits">7</button>
