Add some explanatory section commnets

--- a/index.html
+++ b/index.html
@@ -13,12 +13,16 @@
 </head>
 <body>
     <main>
+        <!-- Main calculator interface -->
         <section class="calculator" aria-label="Calculator">
+            
+            <!-- Calculator display -->
             <div class="screen" aria-label="Screen">
                 <span class="sub-display" aria-label="Last operation"></span>
                 <span class="main-display" aria-label="Current value"></span>
             </div>
 
+            <!-- Calculator buttons -->
             <div class="buttons" aria-label="Buttons">
                 <button class="general clear" aria-label="Clear">AC</button>
                 <button class="general delete" aria-label="Delete">⌫</button>
