--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <!-- Calculator display -->
             <div class="screen" aria-label="Screen">
                 <span class="sub-display" aria-label="Last operation"></span>
-                <span class="main-display" aria-label="Current value"></span>
+                <span class="main-display" aria-label="Current result"></span>
             </div>
 
             <!-- Calculator buttons -->
