Change class name from digits to digit

--- a/index.html
+++ b/index.html
@@ -28,20 +28,20 @@
                 <button class="general delete" aria-label="Delete">⌫</button>
                 <button class="general operator" aria-label="Division">/</button>
                 <button class="general operator" aria-label="Multiplication">*</button>
-                <button class="general digits">7</button>
-                <button class="general digits">8</button>
-                <button class="general digits">9</button>
+                <button class="general digit">7</button>
+                <button class="general digit">8</button>
+                <button class="general digit">9</button>
                 <button class="general operator" aria-label="Subtract">-</button>
-                <button class="general digits">4</button>
-                <button class="general digits">5</button>
-                <button class="general digits">6</button>
+                <button class="general digit">4</button>
+                <button class="general digit">5</button>
+                <button class="general digit">6</button>
                 <button class="general operator" aria-label="Add">+</button>
-                <button class="general digits">1</button>
-                <button class="general digits">2</button>
-                <button class="general digits">3</button>
+                <button class="general digit">1</button>
+                <button class="general digit">2</button>
+                <button class="general digit">3</button>
                 <button class="general equal">=</button>
-                <button class="special digits">0</button>
-                <button class="general digits">.</button>
+                <button class="special digit">0</button>
+                <button class="general digit">.</button>
             </div>
         </section>
     </main>
