Clarify aria-label content

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             
             <!-- Calculator display -->
             <div class="screen" aria-label="Screen">
-                <span class="sub-display" aria-label="Last operation"></span>
+                <span class="sub-display" aria-label="Previous operation"></span>
                 <span class="main-display" aria-label="Current result"></span>
             </div>
 
